fixed article alignment on articles

--- a/article/css/article.css
+++ b/article/css/article.css
@@ -133,7 +133,6 @@ article img {
     }
 
     .article {
-        margin-top: -1000px;
         margin-bottom: -10%;
     }
 
@@ -143,7 +142,7 @@ article img {
 
     h2 {
         text-align: center;
-        margin-bottom: -10%;
+        margin-bottom: -5%;
     }
 
     header ul li a i {
